# PyFa

./: .gitignore  Fa_to_file.R  LICENSE  README.md  bash_executor.sh  borders  deploy_to_testPiPY.sh  load_deployed_env  main.py  pyproject.toml  test.py  to_xarray.py
.github/workflows/: main_workflow.yml
.virtual_documents/examples/: Untitled.ipynb  pyfa-python-example.ipynb
buildscripts/: build_package  test_PyPi_package  test_build_package  upload_package_to_testPyPi
docs/: VSC_Usage.md  pyfa_on_vsc_setup.sh
examples/: FaCollection_demo.ipynb  pyfa-python-example.ipynb
examples/.ipynb_checkpoints/: FaCollection_demo-checkpoint.ipynb  pyfa-python-example-checkpoint.ipynb
modules/: Fa_to_file.R  IO.py  plotting.py
pyfa/: __init__.py  bash_executor.sh  lib_functions.py  main.py
pyfa/modules/: setup_shell_commands.py  to_xarray.py
pyfa_tool/: __init__.py  bash_executor.sh  collection.py  dataset.py  file.py  lib_functions.py  main.py
pyfa_tool/modules/: Fa_to_file.R  IO.py  describe.py  describe_module.py  geospatial_functions.py  plotting.py  reading_fa.py  setup_shell_commands.py  to_xarray.py
pyfa_tool/modules/rfa_scripts/: get_all_fields.R  get_all_metadata.R  get_field.R  get_fieldnames.R
tests/: package_tests.py
