[tool.poetry]
name = "pyfa"
version = "0.1.6"
description = "A python wrapper on RFa for plotting and loading FA files with Xarray"
authors = ["Thomas Vergauwen <thomas.vergauwen@meteo.be>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.3"
numpy = "^1.24.1"
matplotlib = "^3.6.3"
geopandas = "^0.12.2"
xarray = "^2023.1.0"
rioxarray = "^0.13.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
